<resources>
    <string name="app_name">Ares\'s E-Commerce</string>
    <string name="action_settings">Settings</string>
    <string name="check_availability">Check Availability</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_admin">Admin</string>
    <string name="action_home">Home</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="name">Name</string>
    <string name="submit">submit</string>
    <string name="action_cart">Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="submit_order">Submit Order</string>
    <string name="card_number">Card Number</string>
    <string name="address">Address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>
