<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CartActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/cart_text"
              android:padding="16dp"
              android:textSize="32sp"
              android:textColor="#000"
              android:text="@string/your_cart"/>

    <androidx.recyclerview.widget.RecyclerView android:layout_width="0dp"
                                               android:layout_height="wrap_content"
                                               app:layout_constraintLeft_toLeftOf="parent"
                                               app:layout_constraintRight_toRightOf="parent"
                                               app:layout_constraintTop_toBottomOf="@id/cart_text"
                                               android:id="@+id/cartRecyclerView"/>

    <Button android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:text="@string/submit_order"
            android:background="#ce0000"
            android:textColor="#FFF"/>

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_margin="16dp"
              android:hint="@string/card_number"
              android:id="@+id/cartNumberEditText"
              app:layout_constraintTop_toBottomOf="@id/cartRecyclerView"/>

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:hint="@string/address"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/cartNumberEditText"
              android:id="@+id/addressEditText"
    />

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/firstNameEditText"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="8dp"
              android:layout_marginTop="16dp"
              android:hint="@string/first_name"
              app:layout_constraintTop_toBottomOf="@id/addressEditText"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"/>

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/lastNameEditText"
              android:layout_marginTop="16dp"
              android:hint="@string/last_name"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="16dp"
              app:layout_constraintTop_toBottomOf="@id/addressEditText"
              app:layout_constraintStart_toEndOf="@+id/firstNameEditText" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>