<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="16dp"
                                                   tools:context=".AdminFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/admin_panel_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/admin_panel"/>

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:hint="@string/name"
              android:id="@+id/newProductEditText"
              android:inputType="text"
              app:layout_constraintTop_toBottomOf="@id/admin_panel_textView"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"/>

    <Button android:layout_width="wrap_content"
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newProductEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>